--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,11 @@
 PORT = 3000
+
+POSTGRES_HOST = localhost
+
+POSTGRES_PORT = 5433
+
+POSTGRES_USERNAME=postgres
+
+POSTGRES_PASSWORD=admin
+
+POSTGRES_DATABASE = nestjs-typeorm-postgresql1-db
